--- a/public/fontDMSans/dmsan.html
+++ b/public/fontDMSans/dmsan.html
@@ -26,6 +26,13 @@
         font-family: DMSans_B;
         font-weight: bold;
     }
+    .t6{
+        font-family: Mon;
+        font-weight: bold;
+    }
+    .t7{
+        font-family: Mon;
+    }
   </style>
 </head>
 <body>
@@ -44,6 +51,12 @@
     </div>
     <div class="t5">
         font DMSReg bold
+    </div>
+    <div class="t6">
+        font Mon bold
+    </div>
+    <div class="t7">
+        font Mon normal
     </div>
 </div>
 </body>
