--- a/public/fontDMSans/dmsan.html
+++ b/public/fontDMSans/dmsan.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <title>iconfont Demo</title>
-  <link rel="stylesheet" href="DMSans.css">
+  <link rel="stylesheet" href="DMSansTest.css">
   <script src="iconfont.js"></script>
   <!-- <script src="https://a1.alicdn.com/oss/uploads/2018/12/26/7bfddb60-08e8-11e9-9b04-53e73bb6408b.js"></script> -->
   <!-- <script src="https://a1.alicdn.com/oss/uploads/2018/12/26/a3f714d0-08e6-11e9-8a15-ebf944d7534c.js"></script> -->
@@ -56,7 +56,7 @@
         font Mon bold
     </div>
     <div class="t7">
-        font Mon normal
+        Title
     </div>
 </div>
 </body>
