--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
           align-content: center;
           justify-content: space-around;
           height: 100%;
+          width: 100%;
           font-family: DMSans_R;
       }
       .icon {
