--- a/public/gs2.html
+++ b/public/gs2.html
@@ -1,35 +1,38 @@
-html
-
-<!DOCTYPE>
 
 <html>
 <head>
 <link href="css/lianxi.css" type="text/css" rel="stylesheet">
-<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <style>
-    #div1{
-     width:100px;
-     height:100px;
-     border-radius:50%;
-     background-color:#0099FF;
-    }
-    .t{
-        width:800px;
-        height:800px;
-        background-color:yellow;
-    }
+#allow_curise{
+    position: fixed;
+    width:40px;
+    height:40px;
+    border-radius:50%;
+    border:2px solid rgba(125, 125, 125, 0.75) ;
+}
+#allow_curise::before{
+    content: '';
+    position:absolute;
+    width: 10px;
+    height: 10px;
+    left: 15px;
+    top: 15px;
+    background-color: black;
+    border-radius: 5px;
+
+}
+
+
 </style>
 </head>
 
 
 <body>
-<div class="t">
- <div id="div1">
- 
- </div>
+
+<div id="allow_curise"></div>
 </div>
- 
- <script type="text/javascript" src="js/Untitled-1.js"></script>
+
 </body>
 </html>
 
@@ -38,13 +41,15 @@ html
 
 $(document).ready(function(){
 
- $(".t").mousemove(function(event){
- var evt = event || body.t.event;
- var x=event.pageX;
- var y= event.pageY;
- 
- $("#div1").css({"margin-left":x+"px","position":"absolute","top":y+"px"});   
- })    
+    $("body").mousemove(function(event){
+        var evt = event || body.t.event;
+        var x= event.pageX;
+        var y= event.pageY;
+        setTimeout(()=>{
+            $("#allow_curise").css({"left":(x-20)+"px","top":(y-20)+"px"})
+        },100)
+        
+    })    
 })
 
 </script>
