--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,13 @@
     <link rel="stylesheet" type="text/css" href="./fontDMSans/DMSans.css">
     <style>
       body{
-          background: black;
-          display: flex;
-          flex-direction: column;
-          align-content: center;
-          justify-content: space-around;
-          height: 100%;
-          width: 100%;
+          margin: 0px;
           font-family: DMSans_R;
+          width: 100%;
+      }
+      #app{
+        width: 100%;
+        overflow: hidden;
       }
       .icon {
         width: 1em;
