--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Cyber Car</title>
+    <link rel="icon" href="./logo/logo.png" type="logo/logo.png">
+    <link rel="shortcut icon" href="./logo/logo.png" type="logo/logo.png">	
     <link rel="stylesheet" type="text/css" href="./css/animation.css">
     <link rel="stylesheet" type="text/css" href="./fontDMSans/DMSans.css">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
