--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="./logo/logo.png" type="logo/logo.png">	
     <link rel="stylesheet" type="text/css" href="./css/animation.css">
     <link rel="stylesheet" type="text/css" href="./fontDMSans/DMSans.css">
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="./js/jquery-3.1.1.min.js"></script>
     <style>
       body{
         padding: 0px;
